--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -320,6 +320,40 @@ Upshot: the Thesis is self-undermining."
   …concretely produced matter…possess intrinsic natures and are thus suitable for contemplation and comprehension by insight."
 -Bhikkhu Bodhi, Acariya Anuruddha, A Comprehensive Manual of Abhidhamma, pages 3, 15, 26, 235, 260</p>
 
+<p>Compare Yogacara:</p>
+
+<p>"The Yogacara (sometimes translated as “Mind only”) school of Buddhist philosophy contends that all human experience is constructed by mind. Some later representatives of one Yogacara subschool (Prajnakaragupta, Ratnakīrti) propounded a form of idealism that has been interpreted as solipsism. A view of this sort is contained in the 11th-century treatise of Ratnakirti, “Refutation of the existence of other minds” (Santanantara dusana), which provides a philosophical refutation of external mind-streams from the Buddhist standpoint of ultimate truth (as distinct from the perspective of everyday reality)."
+  -Wikipedia on solipsism
+  reference: A. C. Senape McDermott (2013). An Eleventh-Century Buddhist Logic of ‘Exists’: Ratnakīrti’s Kṣaṇabhaṅgasiddhiḥ Vyatirekātmikā. Foundations of language. Vol. 2. Springer-Science Business Media. p. 1. ISBN 978-94-017-6322-6.</p>
+  
+  <p>"Regarding existing Sanskrit sources, the term appears in the first verse of Vasubandhu’s Vimśatikā, which is a locus classicus of the idea, it states:[16]
+  
+  Vijñaptimātram evaitad asad arthāvabhāsanāt yathā taimirikasyāsat keśa candrādi darśanam. “This [world] is vijñaptimātra, since it manifests itself as an unreal object (artha), just like the case of those with cataracts seeing unreal hairs in the moon and the like.”
+  
+  According to Mark Siderits, what Vasubandhu means here is that we are only ever aware of mental images or impressions which manifest themselves as external objects, but “there is actually no such thing outside the mind.”[16]
+  
+  The term also appears in Asaṅga’s classic Yogācāra work, the Mahāyānasaṃgraha (no Sanskrit original, trans. from Tibetan):
+  
+  These representations (vijñapti) are mere representations (vijñapti-mātra), because there is no [corresponding] thing/object (artha)…Just as in a dream there appear, even without a thing/object (artha), just in the mind alone, forms/images of all kinds of things/objects like visibles, sounds, smells, tastes, tangibles, houses, forests, land, and mountains, and yet there are no [such] things/objects at all in that [place]. MSg II.6[17]
+  
+  The term is sometimes used as a synonym with citta-mātra (mere citta), which is also used as a name for the school that suggests Idealism.[4][18] Schmithausen writes that the first appearance of this term is in the Pratyupanna samadhi sutra, which states:
+  
+  This (or: whatever belongs to this) triple world (*traidhātuka) is nothing but mind (or thought: *cittamatra). Why? Because however I imagine things, that is how they appear.[19]"
+  -Wikipedia on Yogacara</p>
+  
+  <p>"Scholars such as Saam Trivedi argue that Yogācāra is similar to Idealism (closer to a Kantian epistemic idealism), though they note that it is its own unique form and that it might be confusing to categorize it as such.[21] Paul Williams, citing Griffiths, writes that it could be termed “dynamic idealism”.[22] Sean Butler argues for the idealistic nature of Yogācāra, noting that there are numerous similarities between Yogācāra and the systems of Kant and Berkeley.[23] Jay Garfield also argues that Yogācāra is “akin to the idealisms defended by such Western philosophers as Berkeley, Kant and Schopenhauer.”[24]
+  
+  Jonathan Gold writes that the Yogācāra thinker Vasubandhu can be said to be an idealist (similar to Kant), in the sense that for him, everything in experience as well as its causal support is mental, and thus he gives causal priority to the mental."
+  -Wikipedia on Yogacara</p>
+  
+  <p>"The Vaibhāṣika’s realistic theory of the two truths and the Sautrāntika’s representationalist theory of the two truths both affirm the ultimate reality of physical objects constituted by atoms. The Yogācāra rejects physical realism of both the Vaibhāṣika and the Sautrāntika, although it agrees with the Sautrāntika’s representationalist theory as far as they both affirm representation as the intentional objects in perception and deny in perception a direct access to any external object. Where they part their company is in their response to the questions: what causes representations? Is the contact of senses with physical objects necessary to give rise to representations in perception? The Sautrāntika’s reply is that external objects cause representations, given that these representations are intentional objects there is indeed a contact between senses and external objects. This affirmative response allows the Sautrāntika to affirm reality of external objects. The Yogācārin however replies that “subliminal impressions” (vāsanās) from foundational consciousness (ālayavijñāna) are the causes of the mental representations, and given that these impressions are only internal phenomena acting as intentional objects, the contact between senses and external objects is therefore rejected even conventionally. This allows the Yogācārin to deny even conventional reality of all physical objects, and argue that all conventional realities are our mental representations, mental creations, cognitions etc.
+  
+  The central thesis in the Yogācāra philosophy, the theory of the two truths echoes is the assertion that all that is conventionally real is only ideas, representations, images, creations of the mind, and that there is no conventionally real object that exists outside the mind to which it corresponds. These ideas are only objects of any cognition. The whole universe is a mental universe. All physical objects are only fiction, they are unreal even by the conventional standard, similar to a dream, a mirage, a magical illusion, where what we perceive are only products of our mind, without a real external existence.
+  
+  Inspired by the idealistic tendencies of various sūtras consisting of important elements of the idealistic doctrines, in the third and the fourth centuries many Indian philosophers developed and systematised a coherent Idealist School. In the beginning of the Viṃśatikā Vasubandhu treats citta, manas, vijñāna, vijñāpti as synonymous and uses these terms as the names of the idealistic school. The chief founders were Maitreyanāth (ca. 300) and Asaṅga (315–390), propagated by Vasubandhu (320–380), Dignāga (480–540) Sthiramati (ca. 500), Dharmapāla (530–561), Hiuan-tsang (602–664), Dharmakīrti (600–660), Śāntarakṣita (ca.725–788) and Kamalaśīla (ca.740–795). The last two are Yogācāra-Mādhyamikas in contrast with the earlier figures who are identified as Yogācārins."
+  
+  -Thakchoe, Sonam, “The Theory of Two Truths in India”, The Stanford Encyclopedia of Philosophy</p>
+
     <p>Another notable fact is that while many think of Hinduism as being idealism, this is actually a gross oversimplification. In reality only certain schools teach idealism, while many others are realist. For example, of the six orthodox Hindu schools, Samkya, Yoga, Nyaya, Vaisheshika, Mimamsa, and Vedanta, only one, Vedanta, is idealism, and only certain versions of it. For example, Ramanuja's Vishishtadvaita Vedanta was realist and argued against idealism, as did Madhvacharya's Dvaita Vedanta, while Adi Shankara's Advaita Vedanta is the one known for being idealist. The reason is probably that Advaita philosophy became very popular outside of India, and many falsely believe that it represents Hinduism as a whole.</p>
 
    
