--- a/recipes/commonSense.html
+++ b/recipes/commonSense.html
@@ -63,7 +63,7 @@
 
 <p>Honorable mention need be made for the different versions of hedonism, if nothing else than to clear up a common misconception.Epicurus was a hedonist, and Epicureanism is hedonistic. Most picture a lunatic, drunk, promiscuous person, when they think "hednoist." Something like this:</p>
 
-<img class="hedonism" src="https://static.wikia.nocookie.net/enfuturama/images/5/56/Character_Hedonismbot.png/revision/latest?cb=20221005104549">
+<img class="hedonism" src="https://theinfosphere.org/images/thumb/8/82/Hedonism_Bot.jpg/225px-Hedonism_Bot.jpg" alt="And image of hedonism bot from the show Futurama">
 
 <p>On the contrary, though, the word can also denote someone like Epicurus, who, despite being smeared as the above, was, in reality, chaste, moderate in food and drink, avoided violence and politics, and was, by most modern standards, a reserved, reasonable fellow, and so he designed his philosophy, as well. Thus, we see, there is variety in the word. Now, of course, there were others, for example, the Chavarka:</p>
 
