--- a/recipes/commonSense.html
+++ b/recipes/commonSense.html
@@ -65,7 +65,7 @@
 
 <img class="hedonism" src="https://theinfosphere.org/images/thumb/8/82/Hedonism_Bot.jpg/225px-Hedonism_Bot.jpg" alt="And image of hedonism bot from the show Futurama">
 
-<p>On the contrary, though, the word can also denote someone like Epicurus, who, despite being smeared as the above, was, in reality, chaste, moderate in food and drink, avoided violence and politics, and was, by most modern standards, a reserved, reasonable fellow, and so he designed his philosophy, as well. Thus, we see, there is variety in the word. Now, of course, there were others, for example, the Chavarka:</p>
+<p>On the contrary, though, the word can also denote someone like Epicurus, who, despite being smeared as the above, was, in reality, chaste, moderate in food and drink, avoided violence and politics, and was, by most modern standards, a reserved, reasonable fellow, and so he designed his philosophy, as well. Thus, we see, there is variety in the word. Now, of course, there were others, for example, the Charvaka:</p>
 
 
 
