--- a/recipes/commonSense.html
+++ b/recipes/commonSense.html
@@ -51,6 +51,8 @@
     -Chandrakirti, The Emptiness of Emptiness, translated by C.W. Huntington
 </p>
 
+
+
 <p>I might also note that there have been philosophers who point out that many philosophies actually create the problems they seek to solve through a misuse of language. This is known as ordinary language philosophy. An example of this might be "What is right and wrong?" Epicurus famously noted that things that cause physical pain are wrong. Any rational person can agree that they do not want to be injured, and that we are hard wired to see this as "wrong." When we give this answer to most philosophical minded people, though, we see an example of misuse of language in the reply, "No, I mean, ultimately, like, objectively, what is right and wrong?" this creates an unsolvable riddle that only appears to be a legitimate question. Answering it would require words, and concepts, to exist as abstract entities floating out in space or something. In reality it is no different than a Zen koan, like the famous "What is, is what?" koan from the Gateless Gate. Yet, while the koan is supposed to lead to enlightenment, misuse of language to create ostensibly solvable philosophical problems is just a way to keep philosophers in business forever. </p>  
 
         <p>In fact, one might argue that all solvable philosophical problems were solved in the last few hundred years, or even that they were all solved a thousand, or two thousand years ago, or even further back in time. This becomes pretty clear when one reads enough ancient Indian, Greek, Roman, and Asian philosophy, and other philosophies from different places. That is to say, for any philosophical problem, somewhere in the world, it has already been solved. All problems that still exist either are old problems that were never soluble, and are just language quirks, or previously solved problems that have been reworded to be insoluble, or are new problems that are merely word games masquerading as philosophy. </p>  
@@ -74,6 +76,12 @@
     Accustom yourself to believe that death is nothing to us, for good and evil imply awareness, and death is the privation of all awareness; therefore a right understanding that death is nothing to us makes the mortality of life enjoyable, not by adding to life an unlimited time, but by taking away the yearning after immortality. For life has no terror; for those who thoroughly apprehend that there are no terrors for them in ceasing to live. Foolish, therefore, is the person who says that he fears death, not because it will pain when it comes, but because it pains in the prospect. Whatever causes no annoyance when it is present, causes only a groundless pain in the expectation. Death, therefore, the most awful of evils, is nothing to us, seeing that, when we are, death is not come, and, when death is come, we are not. It is nothing, then, either to the living or to the dead, for with the living it is not and the dead exist no longer.
     -Epicurus Letter to Menoeceus
 </p>
+
+<p>"The things you <strong>really need</strong> are few and easy to come by, but the things you can imagine you need are infinite, and <strong>you will never be satisfied.</strong>
+    -Epicurus
+</p>
+
+
 
 <p>Now, of course, there were others, for example, the Charvaka:</p>
 
@@ -104,6 +112,12 @@
     — Sarvasiddhanta Samgraha, Verses 8, 9-12, Sarva-Darsana-Samgraha, various passages</p>
 
     <p>And the Cyrenaics. While Epicurus was a direct realist, and even the Charvaka were realist, the Cyrenaics were incredibly skeptical, and believed that pleasure was all. They believed all we can know are our senses, but not what they sense. This, obviously, falls into similar self refutation as discussed elsewhere on this site. Nonetheless, they are interesting because of their position, and the fact that they still saw reason in going by social standards, as such things can bring pleasure, and avoid pain. </p>
+
+    <p>While we're on the topic, here is an excellent quote about happiness:</p>
+
+<p>"He has the most who is most content with the least."
+    -Diogenes
+</p>
 
     <p> Since the Charvaka system is very interesting, and it has been summed up very concisely, and is public domain being that the text was translated in 1882, I'm going to put it below, as a footnote to this article, the full text of the Charvaka system as covered in the Sarva-Darsana-Samgraha, written by Madhava Acharya and translated by E. B. Cowell and A. E. Gough:
         "THE CHÁRVÁKA SYSTEM.
@@ -285,4 +299,3 @@
        
     </body>
 </html>
-
