addd strong text

--- a/recipes/commonSense.html
+++ b/recipes/commonSense.html
@@ -77,7 +77,7 @@
     -Epicurus Letter to Menoeceus
 </p>
 
-<p>"The things you <strong>really need</strong> are few and easy to come by, but the things you can imagine you need are infinite, and <strong>you will never be satisfied.</strong>
+<p>"The things you <strong>really need</strong> are few and easy to come by, but the things you can imagine you need are infinite, and you <strong>will never be satisfied.</strong>
     -Epicurus
 </p>
 
