--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -337,11 +337,14 @@ Upshot: the Thesis is self-undermining."
 
 <p>Compare Yogacara:</p>
 
-<p>"The Yogacara (sometimes translated as “Mind only”) school of Buddhist philosophy contends that all human experience is constructed by mind. Some later representatives of one Yogacara subschool (Prajnakaragupta, Ratnakīrti) propounded a form of idealism that has been interpreted as solipsism. A view of this sort is contained in the 11th-century treatise of Ratnakirti, “Refutation of the existence of other minds” (Santanantara dusana), which provides a philosophical refutation of external mind-streams from the Buddhist standpoint of ultimate truth (as distinct from the perspective of everyday reality)."
+<p>
+
+"The Yogacara (sometimes translated as “Mind only”) school of Buddhist philosophy contends that all human experience is constructed by mind. Some later representatives of one Yogacara subschool (Prajnakaragupta, Ratnakīrti) propounded a form of idealism that has been interpreted as solipsism. A view of this sort is contained in the 11th-century treatise of Ratnakirti, “Refutation of the existence of other minds” (Santanantara dusana), which provides a philosophical refutation of external mind-streams from the Buddhist standpoint of ultimate truth (as distinct from the perspective of everyday reality)."
   -Wikipedia on solipsism
   reference: A. C. Senape McDermott (2013). An Eleventh-Century Buddhist Logic of ‘Exists’: Ratnakīrti’s Kṣaṇabhaṅgasiddhiḥ Vyatirekātmikā. Foundations of language. Vol. 2. Springer-Science Business Media. p. 1. ISBN 978-94-017-6322-6.</p>
   
-  <p>"Regarding existing Sanskrit sources, the term appears in the first verse of Vasubandhu’s Vimśatikā, which is a locus classicus of the idea, it states:[16]
+  <p>"One of the main features of Yogācāra philosophy is the concept of vijñapti-mātra. It is often used interchangeably with the term citta-mātra in modern and ancient Yogacara sources. The standard translation of both terms is "consciousness-only" or "mind-only." ... 
+    Regarding existing Sanskrit sources, the term appears in the first verse of Vasubandhu’s Vimśatikā, which is a locus classicus of the idea, it states:[16]
   
   Vijñaptimātram evaitad asad arthāvabhāsanāt yathā taimirikasyāsat keśa candrādi darśanam. “This [world] is vijñaptimātra, since it manifests itself as an unreal object (artha), just like the case of those with cataracts seeing unreal hairs in the moon and the like.”
   
@@ -353,7 +356,7 @@ Upshot: the Thesis is self-undermining."
   
   The term is sometimes used as a synonym with citta-mātra (mere citta), which is also used as a name for the school that suggests Idealism.[4][18] Schmithausen writes that the first appearance of this term is in the Pratyupanna samadhi sutra, which states:
   
-  This (or: whatever belongs to this) triple world (*traidhātuka) is nothing but mind (or thought: *cittamatra). Why? Because however I imagine things, that is how they appear.[19]"
+  This (or: whatever belongs to this) triple world (traidhātuka) is nothing but mind (or thought: cittamatra). Why? Because however I imagine things, that is how they appear.[19]"
   -Wikipedia on Yogacara</p>
   
   <p>"Scholars such as Saam Trivedi argue that Yogācāra is similar to Idealism (closer to a Kantian epistemic idealism), though they note that it is its own unique form and that it might be confusing to categorize it as such.[21] Paul Williams, citing Griffiths, writes that it could be termed “dynamic idealism”.[22] Sean Butler argues for the idealistic nature of Yogācāra, noting that there are numerous similarities between Yogācāra and the systems of Kant and Berkeley.[23] Jay Garfield also argues that Yogācāra is “akin to the idealisms defended by such Western philosophers as Berkeley, Kant and Schopenhauer.”[24]
@@ -368,6 +371,10 @@ Upshot: the Thesis is self-undermining."
   Inspired by the idealistic tendencies of various sūtras consisting of important elements of the idealistic doctrines, in the third and the fourth centuries many Indian philosophers developed and systematised a coherent Idealist School. In the beginning of the Viṃśatikā Vasubandhu treats citta, manas, vijñāna, vijñāpti as synonymous and uses these terms as the names of the idealistic school. The chief founders were Maitreyanāth (ca. 300) and Asaṅga (315–390), propagated by Vasubandhu (320–380), Dignāga (480–540) Sthiramati (ca. 500), Dharmapāla (530–561), Hiuan-tsang (602–664), Dharmakīrti (600–660), Śāntarakṣita (ca.725–788) and Kamalaśīla (ca.740–795). The last two are Yogācāra-Mādhyamikas in contrast with the earlier figures who are identified as Yogācārins."
   
   -Thakchoe, Sonam, “The Theory of Two Truths in India”, The Stanford Encyclopedia of Philosophy</p>
+
+  <p>The Laṅkāvatāra Sūtra often presents a mind-only philosophy influenced by the idealistic thought of the Yogacara school. According to the Laṅkāvatāra Sūtra "all things are only manifestations of the mind itself" i.e. all phenomena are "mind-only" (cittamātra) or "ideation-only" (vijñaptimatra).[14] This idealistic view is explained by the Lanka as the view that "what is seen as something external is nothing but one's own mind" (svacitta-drsya-mātram)."
+    -Wikipedia page on The Lankavatara Sutra
+  </p>
 
     <p>Another notable fact is that while many think of Hinduism as being idealism, this is actually a gross oversimplification. In reality only certain schools teach idealism, while many others are realist. For example, of the six orthodox Hindu schools, Samkya, Yoga, Nyaya, Vaisheshika, Mimamsa, and Vedanta, only one, Vedanta, is idealism, and only certain versions of it. For example, Ramanuja's Vishishtadvaita Vedanta was realist and argued against idealism, as did Madhvacharya's Dvaita Vedanta, while Adi Shankara's Advaita Vedanta is the one known for being idealist. The reason is probably that Advaita philosophy became very popular outside of India, and many falsely believe that it represents Hinduism as a whole.</p>
 
@@ -396,6 +403,10 @@ Upshot: the Thesis is self-undermining."
       
      "In some ways people had got used to the idea that India was spiritual and religion-oriented. That gave a leg up to the religious interpretation of India, despite the fact that Sanskrit had a larger atheistic literature than what exists in any other classical language. Madhava Acharya, the remarkable 14th century philosopher, wrote this rather great book called Sarvadarshansamgraha, which discussed all the religious schools of thought within the Indian structure. The first chapter is "Atheism" – a very strong presentation of the argument in favor of atheism and materialism."
     -Wikipedia on Hindu Atheism, Mimamsa</p>
+
+<p>Samkhya philosophy, which is sometimes seen as the basis of Yogic thought,[26] adopts a view that matter exists independently of individual minds. Representation of an object in an individual mind is held to be a mental approximation of the object in the external world.[27] Therefore, Samkhya chooses representational realism over epistemological solipsism. Having established this distinction between the external world and the mind, Samkhya posits the existence of two metaphysical realities Prakriti (matter) and Purusha (consciousness)."
+  -Wikipedia page on Solipsism
+</p>
 
    
 
