--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -372,8 +372,12 @@ Upshot: the Thesis is self-undermining."
   
   -Thakchoe, Sonam, “The Theory of Two Truths in India”, The Stanford Encyclopedia of Philosophy</p>
 
-  <p>The Laṅkāvatāra Sūtra often presents a mind-only philosophy influenced by the idealistic thought of the Yogacara school. According to the Laṅkāvatāra Sūtra "all things are only manifestations of the mind itself" i.e. all phenomena are "mind-only" (cittamātra) or "ideation-only" (vijñaptimatra).[14] This idealistic view is explained by the Lanka as the view that "what is seen as something external is nothing but one's own mind" (svacitta-drsya-mātram)."
+  <p>The Laṅkāvatāra Sūtra often presents a mind-only philosophy influenced by the idealistic thought of the Yogacara school. According to the Laṅkāvatāra Sūtra "all things are only manifestations of the mind itself" i.e. all phenomena are "mind-only" (cittamātra) or "ideation-only" (vijñaptimatra).[14] This idealistic view is explained by the Lanka as the view that "what is seen as something external is nothing but one's own mind" (svacitta-drsya-mātram). ... In turn, the view that the world and phenomena exist "externally", outside of mind, is seen as a serious error that leads to delusion and suffering. The Lanka sutra specifically cites the dualistic view of Samkhya philosophy for criticism."
     -Wikipedia page on The Lankavatara Sutra
+  </p>
+
+  <p>Samkhya philosophy, which is sometimes seen as the basis of Yogic thought, adopts a view that matter exists independently of individual minds. Representation of an object in an individual mind is held to be a mental approximation of the object in the external world. Therefore, Samkhya chooses representational realism over epistemological solipsism. Having established this distinction between the external world and the mind, Samkhya posits the existence of two metaphysical realities Prakriti (matter) and Purusha (consciousness)."
+    -Wikipedia page on Solipsism
   </p>
 
     <p>Another notable fact is that while many think of Hinduism as being idealism, this is actually a gross oversimplification. In reality only certain schools teach idealism, while many others are realist. For example, of the six orthodox Hindu schools, Samkya, Yoga, Nyaya, Vaisheshika, Mimamsa, and Vedanta, only one, Vedanta, is idealism, and only certain versions of it. For example, Ramanuja's Vishishtadvaita Vedanta was realist and argued against idealism, as did Madhvacharya's Dvaita Vedanta, while Adi Shankara's Advaita Vedanta is the one known for being idealist. The reason is probably that Advaita philosophy became very popular outside of India, and many falsely believe that it represents Hinduism as a whole.</p>
@@ -404,9 +408,7 @@ Upshot: the Thesis is self-undermining."
      "In some ways people had got used to the idea that India was spiritual and religion-oriented. That gave a leg up to the religious interpretation of India, despite the fact that Sanskrit had a larger atheistic literature than what exists in any other classical language. Madhava Acharya, the remarkable 14th century philosopher, wrote this rather great book called Sarvadarshansamgraha, which discussed all the religious schools of thought within the Indian structure. The first chapter is "Atheism" – a very strong presentation of the argument in favor of atheism and materialism."
     -Wikipedia on Hindu Atheism, Mimamsa</p>
 
-<p>Samkhya philosophy, which is sometimes seen as the basis of Yogic thought,[26] adopts a view that matter exists independently of individual minds. Representation of an object in an individual mind is held to be a mental approximation of the object in the external world.[27] Therefore, Samkhya chooses representational realism over epistemological solipsism. Having established this distinction between the external world and the mind, Samkhya posits the existence of two metaphysical realities Prakriti (matter) and Purusha (consciousness)."
-  -Wikipedia page on Solipsism
-</p>
+
 
    
 
