--- a/recipes/commonSense.html
+++ b/recipes/commonSense.html
@@ -65,6 +65,22 @@
     -Seneca
 </p>
 
+<p>We might note that Chandrakirti, and his version of Madhyamaka, as well as all other adherents to this version, or versions that hold similar views, are prime examples of this phenomenon, and particularly well illustrate the issue, since they hold two truths at once:
+    
+    <ol>
+        <li>The truth of taking language out of its normal context and inadvertently creating unsolvable problems, masquerading as reason.</li>
+    <li>The truth of the conventional reality, or sometimes called everyday reality, or simply the common sense reality.</li>
+    </p>
+
+    <p>In other words, they keep the ordinary language philosophy, fiercely, and expertly defend it, which we see done beautifully in their debate against the idealists on the <a href="./crepes.html">idealism</a> page. This while also keeping an untenable, self refuting philosophy that comes from over analysis and misuse of words. This is inadvertently demonstrated well by Chandrakirti's statement:</p>
+
+    <p>"......the objects encountered in everyday experience are taken for granted on the consensus of that experience, and any attempt to negate them may be effectively countered by relying on the testimony of just that everyday experience. ... When the entities [taken for granted in the context of everyday experience] are examined, they are found to have no intrinsic distinguishing characteristic other than the mark of the reality [expressed in the truth of the highest meaning]. Therefore the conventional truth of everyday experience is not to be critically examined.
+        -Chandrakirti, The Emptiness of Emptiness, translated by C.W. Huntington
+    </p>
+
+    <p>What becomes clear is that Chandrakirti and other Madhyamikas were very aware that their ultimate philosophy falls apart in the face of commonsense reality, which, ironically, is precisely why they also declare that commonsense reality has no reality aside from expression from the perspective of the highest meaning. In other words, the commonsense world is self evident, and unavoidable, but it is not compatible with analysis from the perspective of their "highest meaning" which is self refuting misuse of words. So, they were forced to admit that commonsense reality is, indeed, truth, while creating a system that splits their philosophy in two in order to ostensibly save the "higher truth" from this destruction. As I've mentioned elsewhere, Stafford L. Betty demonstrated conclusively that the "higher truth" of Madhyamaka is self refuting. Kumarila Bhatta had thoughts on this. See the <a href="./crepes.html">idealism</a> page. Betty also flatly stated, roughly, that requiring two truths in the first place is less than ideal for a philosophy. If your philosophy works, then it should just be true, and stand on its own, without this bifurcation.</p>
+
+
 <p>Honorable mention need be made for the different versions of hedonism, if nothing else than to clear up a common misconception. Epicurus was a hedonist, and Epicureanism is hedonistic. Most picture a lunatic, drunk, promiscuous person, who eats constantly and lays around with a bowl of grapes on their stomach when they think "hednoist." Something like this:</p>
 
 <img class="hedonism" src="https://theinfosphere.org/images/thumb/8/82/Hedonism_Bot.jpg/225px-Hedonism_Bot.jpg" alt="And image of hedonism bot from the show Futurama">
