--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -135,7 +135,12 @@
 
   [The things of the world] do not exist for the saints who have abandoned the pyschophysical aggregates and found peace. If, in a similar manner, they did not exist in the context of everyday experience, then we would not maintain that they do - even in this qualified sense.
    
-  If everyday experience poses no threat to you, then you may persist in this denial of the evidence provided by such experience. Quarrel with the evidence of everyday experience, and afterward we will rely on the winner."
+  If everyday experience poses no threat to you, then you may persist in this denial of the evidence provided by such experience. Quarrel with the evidence of everyday experience, and afterward we will rely on the winner."</p>
+
+  <p>"...the objects encountered in everyday experience are taken for granted on the consensus of that experience, and any attempt to negate them may be effectively countered by relying on the testimony of just that everyday experience."
+
+    <p>
+  </p>
 -Chandrakirti, translated by C. W. Huntington, The Emptiness of Emptiness, and Jay Garfield and William Edelglass, Buddhist Philosophy: Essential Readings</p>
  
   The members of this school saw no conflict in defending both positions, yet, Kumarila Bhatta, also known for his genius and refutation of Buddhist idealism, who was of the Mimamsa school (a very interesting sect of Hinduism, look it up!) certainly noticed, as can be seen by his words on the matter of the Madhyamaka philosophy:</p>
