--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -15,6 +15,8 @@
 
   <div class="vasu">Vasubandhu, an early proponent of a kind of idealism known as Yogacara</div>
 
+  <!-- Add a section for Samanero Bodhesako's flux argument-->
+
   <p>At a glance:</p>
   <ul>
     <li>Idealism teaches all is mind, and so everything is an illusion, imaginary, and unreal.</li>
