--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -279,7 +279,7 @@ Upshot: the Thesis is self-undermining."
 
     <p>Hence, when we argue using reason, rational thiking, and logic, Yogacara and Madhyamaka cease to be valid. If we inexplicably included and considered as valid the claim that their teachings are true beyond all language, which, of course, puts it beyond all reason, rational thinking, and logic, then we've accepted their religious claims on faith alone. Further, as above, we could easily counter that with, "No, MY teaching is the most true, and better than yours, and is also outside of language and concepts!" These are not provable claims. They are nonsense arguments.</p>
 
-    <p>It might help to look at philosophy from afar, too. When we view it over all of recorded history, we see what is known as the fallacy of composition being made throughout. This would be like if you saw a bus, and, since its tires are rubber, you conclude that the whole thing, from the body, to the engine, steering wheel, lights, and so on must be rubber, too. This is fallacious reasoning. Now, look at ancient man. He looked at the earth, and the animals, and decided the whole universe was the earth, sitting on several elephants, balancing on a turtle. Other ancients looked at themselves, and said that the whole universe is one big person. Later people saw that they have minds, and declared that the whole universe is mind. Today, people look at technology, and claim the whole universe is technology. See the pattern? We look back on ancient man and laugh at their fallacy of composition. How absurd that the whole universe is the earth! How silly that the whole universe could be one big person! yet, we respect those today who claim the exact same thing, but have merely chagned out a term in their fallacious assumption. Might we refrain from making egregious claims of what the whole universe must be, in order to avoid falling into this pattern of flawed reasoning? </p> 
+    <p>It might help to look at philosophy from afar, too. When we view it over all of recorded history, we see what is known as the fallacy of composition being made throughout. This would be like if you saw a bus, and, since its tires are rubber, you conclude that the whole thing, from the body, to the engine, steering wheel, lights, and so on must be rubber, too. This is fallacious reasoning. Now, look at ancient man. He looked at the earth, and the animals, and decided the whole universe was the earth, sitting on several elephants, balancing on a turtle. Other ancients looked at themselves, and said that the whole universe is one big person. Later people saw that they have minds, and declared that the whole universe is mind. Today, people look at technology, and claim the whole universe is technology. See the pattern? We look back on ancient man and laugh at their fallacy of composition. How absurd that the whole universe is the earth! How silly that the whole universe could be one big person! Yet, we respect those today who claim the exact same thing, but have merely chagned out a term in their fallacious assumption. Might we refrain from making egregious claims of what the whole universe must be, in order to avoid falling into this pattern of flawed reasoning? </p> 
 
       <p>A very fair question at this point would be: "Why in the world is the author of this article so down on idealism?" Well, idealism is either evil, or pointless, and a waste of time. How might it be evil? Imagine someone who truly believes it. Not like 99.99999% of idealists who talk the talk of the idealists, but strictly walk the walk of the realists. I mean someone who <strong>really</strong> believes it, and so who walks into traffic without looking both ways, who ceases to eat and drink, and so on. They would be dead in a week! This is evil. Telling someone that everything is imaginary, which, if taken literally, is a fatal position, is evil. That's an extreme example, and let's hope no one actually takes idealism as actually true! Now, a much more common version of this is where someone will still keep themselves alive, but will make other choices that are less than desirable. For example, they might pay their bills, and look both ways in traffic, but they might drink too much, and eat unhealthy foods, justifying it with "It's all imaginary! Who cares?" They might also become immoral for the same reason. What does it matter if you steal something that is imaginary? What does it matter if you lie about your own mistake, and blame a coworker to save your own butt at work if they, and the job, and everything is imaginary? And so on.</p>
 
@@ -301,6 +301,57 @@ Upshot: the Thesis is self-undermining."
 
   <p>As an interesting aside, while Buddhism is known for its later iterations in the shape of Madhyamaka relativism and Yogacara idealism, both of which are Mahayana Buddhism created hundreds of years after the historical Buddha had already died, the earlier form of Buddhism, Theravada, which is based on texts that are thought to have been composed while the Buddha still lived, was overtly realist, as are the texts themselves, as can be seen by the following:</p>
 
+
+  <p>Abbreviations used in Pali texts
+    AN (or A):
+    Anguttara Nikaya
+    Cv:
+    Cullavagga
+    Dhp:
+    Dhammapada
+    DhpA:
+    Dhammapada-atthakatha (Commentary to the Dhammapada)
+    DN (or D):
+    Digha Nikaya
+    Iti:
+    Itivuttaka
+    Khp:
+    Khuddakapatha
+    KhpA:
+    Khuddakapatha-atthakatha (Commentary to the Khuddakapatha)
+    KN:
+    Khuddaka Nikaya
+    Miln:
+    Milindapañha
+    MN (or M):
+    Majjhima Nikaya
+    Mv:
+    Mahavagga
+    Nd:
+    Niddesa
+    Nm:
+    Mahaniddesa
+    Nc:
+    Culaniddesa
+    Pv:
+    Petavatthu
+    Sn:
+    Sutta Nipata
+    SN (or S):
+    Samyutta Nikaya
+    Thag:
+    Theragatha
+    ThagA:
+    Theragatha-atthakatha (Commentary to the Theragatha)
+    Thig:
+    Therigatha
+    ThigA:
+    Therigatha-atthakatha (Commentary to the Therigatha)
+    Ud:
+    Udana
+    Vv:
+    Vimanavatthu</p>
+    
   <p>“If, friends, internally the eye is intact but no external forms come into its range, and there is no corresponding conscious engagement, then there is no manifestation of the corresponding section of consciousness. If internally the eye is intact and external forms come into its range, but there is no corresponding conscious engagement, then there is no manifestation of the corresponding section of consciousness."
     -Majjhima Nikaya 28</p>
    
