--- a/recipes/easy-enchiladas.html
+++ b/recipes/easy-enchiladas.html
@@ -14,6 +14,9 @@
        <img class="nag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e3/Nagarjuna_with_84_mahasiddha_cropped.jpg/200px-Nagarjuna_with_84_mahasiddha_cropped.jpg" alt="A painting of Nagarjuna, a monk in robes.">
        <div class="nagWord">Nagarjuna, a famous relativist of the Buddhist Madhyamaka school</div>
 
+        
+       <!-- Add section refuting paradigm shift theory.  -->
+
       <p> Relativism is pretty easy to get through. It is built up on what seems like an insurmountable amount of arguments, to a maddening height. However, the entire philosophy is built missing a linchpin. This pin, this missing knowledge gap, is the fact that if all is relative, then nothing is actually true, including the position that all is relative. It collapsed before you even approached it.</p>
 
       <p>Put differently: "A common argument against relativism suggests that it inherently refutes itself: the statement "all is relative" classes either as a relative statement or as an absolute one. If it is relative, then this statement does not rule out absolutes. If the statement is absolute, on the other hand, then it provides an example of an absolute statement, proving that not all truths are relative.""
